# sdScript

./: .gitignore  Makefile.am  README.md  configure.ac  dependencies.fish
doc/: sdScript_doc.pd
scripts/: build.fish  exit.fish  init.fish  install_doc.fish  run_doc.fish  test_exit.fish  test_init.fish  test_run.fish
src/global/: Basic.h  Global.h  LinkedList.h  Map.h
src/sdScript/: Commands.c  Function.c  Function.h  SymbolTable.c  SymbolTable.h  sdScript.c  sdScript.h  sdScriptObj.c
